친한친구, 게시글(페이징, 정렬, 이벤트 게시글)